--- a/plugins/cloudbuild.yaml
+++ b/plugins/cloudbuild.yaml
@@ -3,8 +3,9 @@ platforms:
 - os: linux
   sha256: 4cf181eb79b1527c20ceff4dba072a8db897ef448e5b276e2d2d70b0a61e6282
   uri: https://storage.googleapis.com/cloudbuild-builder/linux/cloudbuild
+- os: darwin
+  uri: https://storage.googleapis.com/cloudbuild-builder/darwin/cloudbuild
 version: "master"
 shortDescription: Use Google Cloud Builder as your skaffold builder.
 caveats: |
-  This plugin needs the following programs:
   * You must have a Google Cloud Platform project with GCB set up to use this feature, please visit https://cloud.google.com/cloud-build/ for more info.
